<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mp_blue"
    >

<LinearLayout
    android:layout_width="155px"
    android:layout_height="155px"
    android:id="@+id/ll_amount"
    android:layout_centerVertical="true"
    android:layout_marginLeft="5px"
    android:background="@drawable/bg_round_dark"
    android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/sub_trans_amount_content"
            android:textColor="#ffffff"
            android:textSize="18px"
            android:onClick="showPic"/>


        <TextView
            android:id="@+id/tv_amount"
            android:layout_marginTop="25px"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:textSize="18px"
            android:textStyle="bold"
            android:onClick="showPic"
            android:textColorHint="@color/gray_eee55"
            android:gravity="center_horizontal"
            android:hint="@string/trans_amount_hint"
            android:textColor="@color/white" />
</LinearLayout>
<LinearLayout
    android:layout_width="215px"
    android:layout_height="155px"
    android:layout_toRightOf="@+id/ll_amount"
    android:layout_centerVertical="true"
    android:layout_marginLeft="5px"
    android:layout_marginRight="5px"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_blue_stroke"
    android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_qr_code"
                    android:layout_width="120px"
                    android:layout_height="120px"
            android:layout_margin="5px"
            android:src="@drawable/icon_qr"
            android:gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="4px"
            android:layout_marginRight="4px"
            android:gravity="center_horizontal"
            android:onClick="showPic"
            android:text="@string/sub_trans_code_tip3"
            android:textColor="@color/white"
            android:textSize="13px" />
</LinearLayout>
</RelativeLayout>